fixing featureStore saving flow